--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,33 @@ ul {
     font-weight: 700;
     margin-top: 10px;
 }
+
+.info-section {
+    padding: 30px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-img {
+    width: 100px;
+    height: 100px;
+    border: 3px solid var(--call-to-color);
+    border-radius: 10px;
+}
+
+.img-subtext {
+    width: 100px;
+    height: 100px;
+    font-size: 11px;
+    text-align: center;
+    margin-top: 5px;
+    color: #6d747d;
+}
+
+.img-container {
+    display: flex;
+    gap: 32px;
+    margin-top: 30px;
+}
