--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ ul {
 .quote-section {
     background-color: #E5E7EB;
     font-size: 36px;
-    padding: 120px 0; 
+    padding: 100px 0; 
     
 }
 
@@ -142,4 +142,40 @@ ul {
 .signature {
     align-self: flex-end;
     font-weight: 500;
+}
+
+.call-to-action {
+    padding: 100px;
+}
+
+.call-element {
+    margin: 0 auto;
+    width: 1000px;
+    height: 150px;
+    background-color: var(--call-to-color);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 32px;
+    color: var(--main-text-color);
+    border-radius: 10px;
+}
+
+.call-text h3 {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.call-text p {
+    color: var(--secondary-text-color)
+}
+
+.call-button {
+    padding: 5px 30px;
+    color: var(--main-text-color);
+    background-color: var(--call-to-color);
+    font-weight: 800;
+    font-size: 18px;
+    border-radius: 10px;
+    border: 2px solid var(--main-text-color)
 }
