--- a/styles.css
+++ b/styles.css
@@ -179,3 +179,10 @@ ul {
     border-radius: 10px;
     border: 2px solid var(--main-text-color)
 }
+
+footer {
+    background-color: var(--primary-color);
+    padding: 30px;
+    text-align: center;
+    color: var(--main-text-color)
+}
